--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head></head>
     <body>
-        wuhu
+        Hold on, will add more stuff here in a little while. Trust me.
     </body>
 </html>
